Sun Jan  7 12:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/CCM_ClientContainerInterceptor.idl:
        * ciao/CCM_ClientContainerInterceptorRegistration.idl:
        * ciao/CCM_ContainerClientRequestInfo.idl:
        * ciao/CCM_ContainerInterceptor.idl:
        * ciao/CCM_ContainerRequestInfo.idl:
        * ciao/CCM_ContainerServantRequestInfo.idl:
        * ciao/CCM_ContainerServerRequestInfo.idl:
        * ciao/CCM_ContainerStubRequestInfo.idl:
        * ciao/CCM_ExtensionComponent.idl:
        * ciao/CCM_ExtensionContext.idl:
        * ciao/CCM_InvalidRegistration.idl:
        * ciao/CCM_QoS.idl:
        * ciao/CCM_ServantContainerInterceptor.idl:
        * ciao/CCM_ServantContainerInterceptorRegistration.idl:
        * ciao/CCM_ServerContainerInterceptor.idl:
        * ciao/CCM_ServerContainerInterceptorRegistration.idl:
        * ciao/CCM_StubContainerInterceptor.idl:
        * ciao/CCM_StubContainerInterceptorRegistration.idl:
          Added interfaces from QoS for CCM spec (OMG 06-04-15). We
          don't have an implementation yet, just the interfaces at
          this moment

Fri Jan  5 12:14:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/RepositoryManager.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
        * DAnCE/RepositoryManager/RepositoryManager_Impl.h:
          Fixed conversion warnings

        * DAnCE/RepositoryManager/PC_Updater.cpp:
        * DAnCE/RepositoryManager/RMadmin.cpp:
        * DAnCE/RepositoryManager/URL_Parser.cpp:
          Improved layout and documentation

Wed Jan  3 19:32:05 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * CIAO_TAO_DAnCE.mwc:

          Added $(ACE_ROOT)/contrib/minizip since the RepositoryManager can
          use minizip if the zlib feature is enabled.

Wed Jan  3 07:01:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/RepositoryManager.cpp: